<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbl_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txt_Quantity"
        android:text="@string/main_lbl_Quantity" />
    <EditText
        android:id="@+id/txt_Quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/lbl_OgCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_lbl_OgCurrency"/>
    <RadioGroup
        android:id="@+id/rg_OgCurrency"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rg_OC_rdb_Euro"
            android:text="@string/main_rdb_Euro"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rg_MO_rdb_Dolar"
            android:text="@string/main_rdb_Dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rg_MO_rdb_Libra"
            android:text="@string/main_rdb_Pound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <TextView
        android:id="@+id/lbl_FinalCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_lbl_FinalCurrency"/>
    <RadioGroup
        android:id="@+id/rg_FinalCurrency"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rg_MD_rdb_Euro"
            android:text="@string/main_rdb_Euro"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rg_MD_rdb_Dolar"
            android:text="@string/main_rdb_Dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rg_MD_rdb_Libra"
            android:text="@string/main_rdb_Pound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_CurrencyIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_OgCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:id="@+id/img_Arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_FnCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_Convert"/>

</LinearLayout>